--- a/css/main.css
+++ b/css/main.css
@@ -544,6 +544,7 @@ p {
   border-radius: 1rem;
   -webkit-transition: all .2s ease;
   transition: all .2s ease;
+  cursor: pointer;
 }
 
 .form__btn:hover {
