--- a/sass/main.sass
+++ b/sass/main.sass
@@ -319,6 +319,7 @@
 		border: 1px solid rgba(#000, 0.4)
 		border-radius: 1rem
 		transition: all .2s ease
+		cursor: pointer
 		&:hover
 			background-color: $accent
 			border: 1px solid $accent
