--- a/css/main.css
+++ b/css/main.css
@@ -2,14 +2,14 @@
   font-family: "mplus1p";
   font-style: normal;
   font-weight: 400;
-  src: url("../fonts/mplus1p/mplus1p-regular.ttf") format("woff2");
+  src: url("../fonts/mplus1p/mplus1p-regular.ttf") format("ttf");
 }
 
 @font-face {
   font-family: "mplus1p";
   font-style: normal;
   font-weight: 500;
-  src: url("../fonts/mplus1p/mplus1p-medium.ttf") format("woff2");
+  src: url("../fonts/mplus1p/mplus1p-medium.ttf") format("ttf");
 }
 
 * {
@@ -26,7 +26,7 @@ html {
 }
 
 body {
-  font-family: mplus1p, sans-serif;
+  font-family: mplus1p, "M PLUS 1p", sans-serif;
   font-size: 1.6rem;
   color: #fff;
   background-color: #0B0A0D;
@@ -39,7 +39,7 @@ a {
   text-decoration: none;
 }
 
-h1, h2, h3, h4, h5, p {
+h1, h2, h3, h4, h5, p, ul {
   margin: 0;
 }
 
@@ -53,7 +53,7 @@ p {
 
 .header {
   width: 100%;
-  padding: 7rem 0 7.8rem;
+  padding: 7rem 0 0;
   position: fixed;
   z-index: 1000;
   background-color: #0B0A0D;
@@ -83,6 +83,7 @@ p {
   display: flex;
   gap: 3rem;
   z-index: 100;
+  list-style: none;
 }
 
 .nav-menu input {
@@ -91,7 +92,7 @@ p {
 }
 
 .nav-menu__item {
-  padding: 2rem 0;
+  max-width: 22rem;
   border-bottom: 3px solid transparent;
   position: relative;
 }
@@ -100,7 +101,17 @@ p {
   border-bottom: 3px solid #fff;
 }
 
-.nav-menu label__link {
+.nav-menu__item:hover .sub-menu {
+  opacity: 1;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+  pointer-events: auto;
+}
+
+.nav-menu__link {
+  display: block;
+  width: 100%;
+  padding: 2rem 0;
   font-size: 1.6rem;
   font-weight: 500;
   margin: 0;
@@ -109,14 +120,8 @@ p {
   transition: all .3s linear;
 }
 
-.nav-menu label__link:hover {
+.nav-menu__link:hover {
   color: #75FF77;
-}
-
-.nav-menu label:hover ~ .sub-menu {
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
-  opacity: 1;
 }
 
 .sub-menu {
@@ -129,41 +134,58 @@ p {
           flex-direction: column;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  gap: 3rem;
-  max-height: 12rem;
-  position: absolute;
-  top: 14rem;
-  left: 0;
-  z-index: 10;
+  padding: 0;
+  padding-top: 7.45rem;
+  list-style: none;
+  max-height: 25rem;
+  width: 40rem;
+  pointer-events: none;
   opacity: 0;
   -webkit-transform: translateY(-5rem);
           transform: translateY(-5rem);
-  -webkit-transition: all 1s .2s ease;
-  transition: all 1s .2s ease;
+  -webkit-transition: all 1s ease;
+  transition: all 1s ease;
+  position: absolute;
+  top: 100%;
+  left: 0%;
 }
 
 .sub-menu__item {
   width: 22rem;
+  padding: 1.5rem 0;
 }
 
 .sub-menu__link {
   font-size: 1.6rem;
   font-weight: 500;
+  -webkit-transition: color .3s ease;
+  transition: color .3s ease;
+}
+
+.sub-menu__link:hover {
+  color: #75FF77;
 }
 
 .sub-mask {
   width: 100%;
-  height: 0;
+  height: 28rem;
   background-color: #0B0A0D;
   position: absolute;
+  top: 100%;
+  left: 0;
   z-index: 9;
-  -webkit-transition: all 1s .15s ease;
-  transition: all 1s .15s ease;
   pointer-events: none;
+  opacity: 0;
+  -webkit-transform: translateY(-5rem);
+          transform: translateY(-5rem);
+  -webkit-transition: all 1s ease;
+  transition: all 1s ease;
 }
 
 .sub-mask.active {
-  height: 28.8rem;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+  opacity: 1;
 }
 
 .page__mask {
@@ -618,14 +640,14 @@ p {
   font-family: "mplus1p";
   font-style: normal;
   font-weight: 400;
-  src: url("../fonts/mplus1p/mplus1p-regular.ttf") format("woff2");
+  src: url("../fonts/mplus1p/mplus1p-regular.ttf") format("ttf");
 }
 
 @font-face {
   font-family: "mplus1p";
   font-style: normal;
   font-weight: 500;
-  src: url("../fonts/mplus1p/mplus1p-medium.ttf") format("woff2");
+  src: url("../fonts/mplus1p/mplus1p-medium.ttf") format("ttf");
 }
 
 * {
@@ -642,7 +664,7 @@ html {
 }
 
 body {
-  font-family: mplus1p, sans-serif;
+  font-family: mplus1p, "M PLUS 1p", sans-serif;
   font-size: 1.6rem;
   color: #fff;
   background-color: #0B0A0D;
@@ -655,7 +677,7 @@ a {
   text-decoration: none;
 }
 
-h1, h2, h3, h4, h5, p {
+h1, h2, h3, h4, h5, p, ul {
   margin: 0;
 }
 
@@ -746,12 +768,12 @@ p {
   .nav-menu {
     height: 100vh;
     width: 85%;
-    padding: 14rem 0 2rem 5rem;
+    padding: 14rem 0 1.5rem 5rem;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    gap: 4rem;
+    gap: 0rem;
     background-color: #0B0A0D;
     position: absolute;
     top: 0;
@@ -783,15 +805,13 @@ p {
     display: block;
     max-height: 0;
     opacity: 1;
+    padding: 0;
     position: relative;
-    top: 3rem;
+    top: 0;
     left: 3.2rem;
     -webkit-transform: none;
             transform: none;
     overflow: hidden;
-  }
-  .sub-menu__item {
-    margin-bottom: 3rem;
   }
   .sub-menu__link {
     font-size: 1.4rem;
