--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -48,9 +48,9 @@
 	.nav-menu
 		height: 100vh
 		width: 85%
-		padding: 14rem 0 2rem 5rem
+		padding: 14rem 0 1.5rem 5rem
 		flex-direction: column
-		gap: 4rem
+		gap: 0rem
 		background-color: $bgColor
 		position: absolute
 		top: 0
@@ -62,6 +62,7 @@
 			pointer-events: auto
 			&:checked ~ .sub-menu
 				max-height: 50vh
+				// ----> ???????
 		&__item
 			padding: 0
 			&.active
@@ -73,13 +74,12 @@
 		display: block
 		max-height: 0
 		opacity: 1
+		padding: 0
 		position: relative
-		top: 3rem
+		top: 0
 		left: 3.2rem
 		transform: none
 		overflow: hidden
-		&__item
-			margin-bottom: 3rem
 		&__link
 			font-size: 1.4rem
 	// -- sub-menu
