--- a/sass/main.sass
+++ b/sass/main.sass
@@ -4,7 +4,7 @@
 
 .header
 	width: 100%
-	padding: 7rem 0 7.8rem
+	padding: 7rem 0 0
 	position: fixed
 	z-index: 1000
 	background-color: $bgColor
@@ -24,62 +24,79 @@
 	display: flex
 	gap: 3rem
 	z-index: 100
+	list-style: none
 	input
 		display: none
 		pointer-events: none
 	&__item
-		padding: 2rem 0
+		max-width: 22rem
 		border-bottom: 3px solid transparent
 		position: relative
 		&.active
 			border-bottom: 3px solid #fff
-	label 
-		&__link
-			font-size: 1.6rem
-			font-weight: 500
-			margin: 0
-			color: #fff
-			transition: all .3s linear
-			&:hover
-				color: $accent
-		&:hover ~ .sub-menu
-			transform: translateY(0)
+		&:hover .sub-menu
 			opacity: 1
-// -- nav-menu
+			transform: translateY(0)
+			pointer-events: auto
+
+	&__link
+		display: block
+		width: 100%
+		padding: 2rem 0
+		font-size: 1.6rem
+		font-weight: 500
+		margin: 0
+		color: #fff
+		transition: all .3s linear
+		&:hover
+			color: $accent
 
 .sub-menu
 	display: flex
 	flex-direction: column
 	flex-wrap: wrap
-	gap: 3rem
-	max-height: 12rem
-	position: absolute
-	top: 14rem
-	left: 0
-	z-index: 10
+	padding: 0
+	padding-top: 7.45rem
+	list-style: none
+	max-height: 25rem
+	width: 40rem
+
+	pointer-events: none
 	opacity: 0
 	transform: translateY(-5rem)
-	transition: all 1s .2s ease
+	transition: all 1s ease
+
+	position: absolute
+	top: 100%
+	left: 0%
 	&__item
 		width: 22rem
+		padding: 1.5rem 0
 	&__link
 		font-size: 1.6rem
 		font-weight: 500
-// -- sub-menu
+		transition: color .3s ease
+		&:hover
+			color: $accent
+
 .sub-mask
 	width: 100%
-	height: 0
+	height: 28rem
 	background-color: $bgColor
 	position: absolute
+	top: 100%
+	left: 0
 	z-index: 9
-	transition: all 1s .15s ease
 	pointer-events: none
+	opacity: 0
+	transform: translateY(-5rem)
+	transition: all 1s ease
 	&.active
-		height: 28.8rem
-		// opacity: 1
+		transform: translateY(0)
+		opacity: 1
 // -- sub-mask
 
-// маска при открытии меню
+// маска при открытии меню в моб версии
 .page__mask
 	display: none
 	width: 100vw
