--- a/css/main.css
+++ b/css/main.css
@@ -2,14 +2,14 @@
   font-family: "mplus1p";
   font-style: normal;
   font-weight: 400;
-  src: url("../fonts/mplus1p/mplus1p-regular.ttf") format("ttf");
+  src: url("../fonts/mplus1p/mplus1p-regular.woff2") format("woff2");
 }
 
 @font-face {
   font-family: "mplus1p";
   font-style: normal;
   font-weight: 500;
-  src: url("../fonts/mplus1p/mplus1p-medium.ttf") format("ttf");
+  src: url("../fonts/mplus1p/mplus1p-medium.woff2") format("woff2");
 }
 
 * {
@@ -26,7 +26,7 @@ html {
 }
 
 body {
-  font-family: mplus1p, "M PLUS 1p", sans-serif;
+  font-family: mplus1p, sans-serif;
   font-size: 1.6rem;
   color: #fff;
   background-color: #0B0A0D;
@@ -53,7 +53,7 @@ p {
 
 .header {
   width: 100%;
-  padding: 7rem 0 0;
+  padding: 7rem 0;
   position: fixed;
   z-index: 1000;
   background-color: #0B0A0D;
@@ -168,7 +168,7 @@ p {
 
 .sub-mask {
   width: 100%;
-  height: 28rem;
+  height: 21rem;
   background-color: #0B0A0D;
   position: absolute;
   top: 100%;
@@ -640,14 +640,14 @@ p {
   font-family: "mplus1p";
   font-style: normal;
   font-weight: 400;
-  src: url("../fonts/mplus1p/mplus1p-regular.ttf") format("ttf");
+  src: url("../fonts/mplus1p/mplus1p-regular.woff2") format("woff2");
 }
 
 @font-face {
   font-family: "mplus1p";
   font-style: normal;
   font-weight: 500;
-  src: url("../fonts/mplus1p/mplus1p-medium.ttf") format("ttf");
+  src: url("../fonts/mplus1p/mplus1p-medium.woff2") format("woff2");
 }
 
 * {
@@ -664,7 +664,7 @@ html {
 }
 
 body {
-  font-family: mplus1p, "M PLUS 1p", sans-serif;
+  font-family: mplus1p, sans-serif;
   font-size: 1.6rem;
   color: #fff;
   background-color: #0B0A0D;
