--- a/sass/main.sass
+++ b/sass/main.sass
@@ -4,7 +4,7 @@
 
 .header
 	width: 100%
-	padding: 7rem 0 0
+	padding: 7rem 0
 	position: fixed
 	z-index: 1000
 	background-color: $bgColor
@@ -81,7 +81,7 @@
 
 .sub-mask
 	width: 100%
-	height: 28rem
+	height: 21rem
 	background-color: $bgColor
 	position: absolute
 	top: 100%
